gnome-shell 3.34: Don't apply overlap-preventing padding to search results
https://gitlab.gnome.org/GNOME/gnome-shell/commit/3f2cffc2e6a8e57786e79dcd93516212a0a7d65e

--- a/src/_sass/gnome-shell/_common-3.34.scss
+++ b/src/_sass/gnome-shell/_common-3.34.scss
@@ -1836,7 +1836,6 @@ StScrollBar {
   }
 
   //Some hacks I don't even
-  .search-display > StBoxLayout,
   .all-apps,
   .frequent-apps > StBoxLayout {
     // horizontal padding to make sure scrollbars or dash don't overlap content
